--- a/package.json
+++ b/package.json
@@ -3,9 +3,11 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "migrate-dev": "bunx prisma migrate dev && bun run lib/seedTriggers.ts"
   },
   "dependencies": {
+    "@prisma/client": "5.7.1",
     "@supabase/ssr": "latest",
     "@supabase/supabase-js": "latest",
     "autoprefixer": "10.4.15",
@@ -21,6 +23,8 @@
     "@types/node": "20.3.1",
     "@types/react": "18.2.8",
     "@types/react-dom": "18.2.5",
-    "encoding": "^0.1.13"
+    "encoding": "^0.1.13",
+    "postgres": "^3.4.3",
+    "prisma": "^5.7.1"
   }
 }
