--- a/package.json
+++ b/package.json
@@ -11,15 +11,19 @@
     "seed": "bun run prisma/seed.ts"
   },
   "dependencies": {
+    "@nextui-org/react": "^2.2.9",
     "@prisma/client": "5.7.1",
     "@supabase/ssr": "latest",
     "@supabase/supabase-js": "latest",
     "autoprefixer": "10.4.15",
+    "cssnano": "^6.0.2",
+    "framer-motion": "^10.17.0",
     "geist": "^1.0.0",
     "next": "latest",
     "postcss": "8.4.29",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "tailwind-merge": "^2.2.0",
     "tailwindcss": "3.3.3",
     "typescript": "5.1.3"
   },
