--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@prisma/client": "5.7.1",
     "@supabase/ssr": "latest",
     "@supabase/supabase-js": "latest",
+    "@svgr/webpack": "^8.1.0",
     "autoprefixer": "10.4.15",
     "cssnano": "^6.0.2",
     "framer-motion": "^10.17.0",
