--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
     "build": "next build",
     "start": "next start",
     "migrate-dev": "bunx prisma migrate dev && bun run lib/seedTriggers.ts",
-    "seed": "bunx prisma db seed"
+    "seed": "bunx prisma db seed",
+    "lint": "next lint"
   },
   "prisma": {
     "seed": "bun run prisma/seed.ts"
@@ -33,7 +34,18 @@
     "@types/react": "18.2.8",
     "@types/react-dom": "18.2.5",
     "encoding": "^0.1.13",
+    "eslint": "8.56.0",
+    "eslint-config-next": "14.0.4",
+    "husky": "^8.0.3",
+    "lint-staged": "^15.2.0",
     "postgres": "^3.4.3",
+    "prettier": "^3.1.1",
     "prisma": "^5.7.1"
+  },
+  "lint-staged": {
+    "**/*.{ts,tsx}": [
+      "eslint ./ -c .eslintrc.json --quiet",
+      "prettier ./ --write --ignore-unknown"
+    ]
   }
 }
