--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -20,7 +20,8 @@
       "plugins": ["@typescript-eslint", "unused-imports"],
       "rules": {
         "linebreak-style": 0,
-        "@typescript-eslint/no-explicit-any": 0
+        "@typescript-eslint/no-explicit-any": 0,
+        "react/no-unescaped-entities": 0
       }
     }
   ]
