--- a/package.json
+++ b/package.json
@@ -34,9 +34,11 @@
     "@types/node": "20.3.1",
     "@types/react": "18.2.8",
     "@types/react-dom": "18.2.5",
+    "@typescript-eslint/eslint-plugin": "^6.17.0",
     "encoding": "^0.1.13",
     "eslint": "8.56.0",
     "eslint-config-next": "14.0.4",
+    "eslint-plugin-unused-imports": "^3.0.0",
     "husky": "^8.0.0",
     "lint-staged": "^15.2.0",
     "postgres": "^3.4.3",
