--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "typescript": "5.1.3"
   },
   "devDependencies": {
+    "@types/next": "^9.0.0",
     "@types/node": "20.3.1",
     "@types/react": "18.2.8",
     "@types/react-dom": "18.2.5",
