--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "framer-motion": "^10.17.0",
     "geist": "^1.0.0",
     "next": "latest",
-    "postcss": "8.4.29",
+    "postcss": "^8.4.32",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "tailwind-merge": "^2.2.0",
