--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "react-icons": "^4.12.0",
     "tailwind-merge": "^2.2.0",
     "tailwindcss": "3.3.3",
-    "typescript": "5.1.3"
+    "typescript": "5.1.3",
+    "zustand": "^4.4.7"
   },
   "devDependencies": {
     "@types/node": "20.3.1",
