--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "@nextui-org/react": "^2.2.9",
+    "@preline/collapse": "^2.0.2",
     "@prisma/client": "5.7.1",
     "@supabase/ssr": "latest",
     "@supabase/supabase-js": "latest",
@@ -24,8 +25,10 @@
     "next": "latest",
     "postcss": "^8.4.32",
     "react": "18.2.0",
+    "react-collapse": "^5.1.1",
     "react-dom": "18.2.0",
     "react-icons": "^4.12.0",
+    "tailwind": "^4.0.0",
     "tailwind-merge": "^2.2.0",
     "tailwindcss": "3.3.3",
     "typescript": "5.1.3",
@@ -34,6 +37,7 @@
   "devDependencies": {
     "@types/node": "20.3.1",
     "@types/react": "18.2.8",
+    "@types/react-collapse": "^5.0.4",
     "@types/react-dom": "18.2.5",
     "@typescript-eslint/eslint-plugin": "^6.17.0",
     "encoding": "^0.1.13",
