--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "tailwind-merge": "^2.2.0",
     "tailwindcss": "3.3.3",
     "typescript": "5.1.3",
+    "uuid": "^9.0.1",
     "zustand": "^4.4.7"
   },
   "devDependencies": {
@@ -39,6 +40,7 @@
     "@types/react": "18.2.8",
     "@types/react-collapse": "^5.0.4",
     "@types/react-dom": "18.2.5",
+    "@types/uuid": "^9.0.7",
     "@typescript-eslint/eslint-plugin": "^6.17.0",
     "encoding": "^0.1.13",
     "eslint": "8.56.0",
