--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "zustand": "^4.4.7"
   },
   "devDependencies": {
+    "@types/fold-to-ascii": "^5.0.2",
     "@types/node": "20.3.1",
     "@types/react": "18.2.8",
     "@types/react-collapse": "^5.0.4",
@@ -46,7 +47,9 @@
     "eslint": "8.56.0",
     "eslint-config-next": "14.0.4",
     "eslint-plugin-unused-imports": "^3.0.0",
+    "fold-to-ascii": "^5.0.1",
     "husky": "^8.0.0",
+    "jimp": "^0.22.10",
     "lint-staged": "^15.2.0",
     "postgres": "^3.4.3",
     "prettier": "^3.1.1",
