--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "tailwind": "^4.0.0",
     "tailwind-merge": "^2.2.0",
     "tailwindcss": "3.3.3",
-    "typescript": "5.1.3",
+    "typescript": "^5.3.3",
     "uuid": "^9.0.1",
     "zustand": "^4.4.7"
   },
