--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-collapse": "^5.1.1",
     "react-dom": "18.2.0",
     "react-icons": "^4.12.0",
+    "sonner": "^1.3.1",
     "tailwind": "^4.0.0",
     "tailwind-merge": "^2.2.0",
     "tailwindcss": "3.3.3",
