--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "@nextui-org/react": "^2.2.9",
     "@preline/collapse": "^2.0.2",
     "@prisma/client": "5.7.1",
+    "@stripe/react-stripe-js": "^2.4.0",
+    "@stripe/stripe-js": "^2.2.2",
     "@supabase/ssr": "latest",
     "@supabase/supabase-js": "latest",
     "autoprefixer": "10.4.15",
@@ -29,6 +31,7 @@
     "react-dom": "18.2.0",
     "react-icons": "^4.12.0",
     "sonner": "^1.3.1",
+    "stripe": "^14.11.0",
     "tailwind": "^4.0.0",
     "tailwind-merge": "^2.2.0",
     "tailwindcss": "3.3.3",
