Update package.json and tsconfig.json, move seed.ts to data folder, and add new products.json

--- a/.gitignore
+++ b/.gitignore
@@ -36,7 +36,7 @@ yarn-error.log*
 *.tsbuildinfo
 next-env.d.ts
 
-prisma/data/*
-!prisma/data/materials.json
-!prisma/data/hardwares.json
-!prisma/data/products.json
+data/*
+!data/materials.json
+!data/hardwares.json
+!data/products.json
