Exclude "data" directory in tsconfig.json

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -25,5 +25,5 @@
     "types": ["node", "react", "react-dom"]
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts", "global.d.ts"],
-  "exclude": ["node_modules"]
+  "exclude": ["node_modules", "data"]
 }
