--- a/package.json
+++ b/package.json
@@ -14,7 +14,6 @@
   },
   "dependencies": {
     "@nextui-org/react": "^2.2.9",
-    "@preline/collapse": "^2.0.2",
     "@prisma/client": "5.7.1",
     "@stripe/react-stripe-js": "^2.4.0",
     "@stripe/stripe-js": "^2.2.2",
@@ -33,9 +32,8 @@
     "react-icons": "^4.12.0",
     "sonner": "^1.3.1",
     "stripe": "^14.11.0",
-    "tailwind": "^4.0.0",
     "tailwind-merge": "^2.2.0",
-    "tailwindcss": "3.3.3",
+    "tailwindcss": "^3.4.1",
     "typescript": "^5.3.3",
     "uuid": "^9.0.1",
     "zustand": "^4.4.7"
