--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,7 +20,8 @@
       }
     ],
     "paths": {
-      "@/*": ["./*"]
+      "@/*": ["./*"],
+      "react": ["./node_modules/@types/react"]
     },
     "types": ["node", "react", "react-dom"]
   },
