Update ESLint and Tailwind configurations

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -22,7 +22,9 @@
         "linebreak-style": 0,
         "@typescript-eslint/no-explicit-any": 0,
         "react/no-unescaped-entities": 0,
-        "react-hooks/exhaustive-deps": 0
+        "react-hooks/exhaustive-deps": 0,
+        "import/no-anonymous-default-export": 0,
+        "unused-imports/no-unused-imports": 2
       }
     }
   ]
