--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
     "dev": "next dev --turbo",
     "build": "prisma generate && next build",
     "start": "next start",
-    "migrate-dev": "bunx prisma migrate dev && bun run lib/seedTriggers.ts",
-    "seed": "bunx prisma db seed",
+    "migrate-dev": "prisma migrate dev && bun run lib/seedTriggers.ts",
+    "seed": "prisma db seed",
     "lint": "next lint",
     "prepare": "husky install"
   },
@@ -40,7 +40,6 @@
   },
   "devDependencies": {
     "@types/bun": "^1.0.0",
-    "@types/fold-to-ascii": "^5.0.2",
     "@types/node": "20.3.1",
     "@types/react": "18.2.0",
     "@types/react-collapse": "^5.0.4",
@@ -51,9 +50,7 @@
     "eslint": "8.56.0",
     "eslint-config-next": "14.0.4",
     "eslint-plugin-unused-imports": "^3.0.0",
-    "fold-to-ascii": "^5.0.1",
     "husky": "^8.0.0",
-    "jimp": "^0.22.10",
     "lint-staged": "^15.2.0",
     "postgres": "^3.4.3",
     "prettier": "^3.1.1",
@@ -61,7 +58,7 @@
   },
   "lint-staged": {
     "**/*.{ts,tsx}": [
-      "eslint ./ -c .eslintrc.json --quiet",
+      "eslint ./ -c .eslintrc.json --quiet --format visualstudio",
       "prettier ./ --write --ignore-unknown"
     ]
   }
