--- a/package.json
+++ b/package.json
@@ -19,8 +19,10 @@
     "@stripe/stripe-js": "^2.2.2",
     "@supabase/ssr": "latest",
     "@supabase/supabase-js": "latest",
+    "@types/fold-to-ascii": "^5.0.2",
     "autoprefixer": "10.4.15",
     "cssnano": "^6.0.2",
+    "fold-to-ascii": "^5.0.1",
     "framer-motion": "^10.17.0",
     "geist": "^1.0.0",
     "next": "latest",
