--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react-collapse": "^5.1.1",
     "react-dom": "18.2.0",
     "react-icons": "^4.12.0",
+    "sharp": "^0.33.1",
     "sonner": "^1.3.1",
     "stripe": "^14.11.0",
     "tailwind-merge": "^2.2.0",
