--- a/package.json
+++ b/package.json
@@ -4,13 +4,12 @@
     "dev": "next dev --turbo",
     "build": "prisma generate && next build",
     "start": "next start",
-    "migrate-dev": "prisma migrate dev && bun run lib/seedTriggers.ts",
-    "seed": "prisma db seed",
+    "migrate-dev": "dotenv -e .env.development.local -- prisma migrate dev && bun run lib/seedTriggers.ts",
+    "migrate-prod": "dotenv -e .env.production.local -- prisma migrate dev && bun run lib/seedTriggers.ts",
+    "seed": "NODE_ENV=development && bun run data/seed.ts",
+    "seed-prod": "NODE_ENV=production && bun run data/seedProd.ts",
     "lint": "next lint",
     "prepare": "husky install"
-  },
-  "prisma": {
-    "seed": "bun run data/seed.ts"
   },
   "dependencies": {
     "@nextui-org/react": "^2.2.9",
@@ -49,6 +48,7 @@
     "@types/react-dom": "18.2.0",
     "@types/uuid": "^9.0.7",
     "@typescript-eslint/eslint-plugin": "^6.17.0",
+    "dotenv-cli": "^7.3.0",
     "encoding": "^0.1.13",
     "eslint": "8.56.0",
     "eslint-config-next": "14.0.4",
