Update package.json and yarn.lock

--- a/package.json
+++ b/package.json
@@ -4,10 +4,11 @@
     "dev": "next dev --turbo",
     "build": "prisma generate && next build",
     "start": "next start",
+    "generate": "prisma generate",
     "migrate-dev": "dotenv -e .env.development.local -- prisma migrate dev && bun run lib/seedTriggers.ts",
     "migrate-prod": "dotenv -e .env.production.local -- prisma migrate dev && bun run lib/seedTriggers.ts",
-    "seed": "NODE_ENV=development && bun run data/seed.ts",
-    "seed-prod": "NODE_ENV=production && bun run data/seedProd.ts",
+    "seed": "bun --env-file=.env.development.local data/seed.ts",
+    "seed-prod": "bun --env-file=.env.production.local data/seedProd.ts",
     "lint": "next lint",
     "prepare": "husky install"
   },
@@ -21,6 +22,7 @@
     "@types/fold-to-ascii": "^5.0.2",
     "autoprefixer": "10.4.15",
     "cssnano": "^6.0.2",
+    "deep-eql": "^5.0.1",
     "fold-to-ascii": "^5.0.1",
     "framer-motion": "^10.17.0",
     "geist": "^1.0.0",
@@ -42,6 +44,7 @@
   },
   "devDependencies": {
     "@types/bun": "^1.0.0",
+    "@types/deep-eql": "^4.0.2",
     "@types/node": "20.3.1",
     "@types/react": "18.2.0",
     "@types/react-collapse": "^5.0.4",
