--- a/tsconfig.json
+++ b/tsconfig.json
@@ -26,5 +26,5 @@
     "types": ["node", "react", "react-dom"]
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts", "global.d.ts"],
-  "exclude": ["node_modules", "data"]
+  "exclude": ["node_modules", "data", "backup"]
 }
