Update migrate-prod command in package.json

--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "start": "next start",
     "generate": "prisma generate",
     "migrate-dev": "dotenv -e .env.development.local -- prisma migrate dev && bun lib/seedTriggers.ts",
-    "migrate-prod": "dotenv -e .env.production.local -- prisma migrate dev && bun lib/seedTriggers.ts",
+    "migrate-prod": "dotenv -e .env.production.local -- prisma migrate deploy && bun lib/seedTriggers.ts",
     "seed": "bun --env-file=.env.development.local data/seed.ts",
     "seed-prod": "bun --env-file=.env.production.local data/seedProd.ts",
     "studio": "dotenv -e .env.development.local -- prisma studio",
