Update NextThemesProvider and add NextTopLoader

--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "geist": "^1.0.0",
     "next": "latest",
     "next-themes": "^0.2.1",
+    "nextjs-toploader": "^1.6.4",
     "postcss": "^8.4.32",
     "react": "18.2.0",
     "react-collapse": "^5.1.1",
