--- a/package.json
+++ b/package.json
@@ -14,18 +14,27 @@
     "prepare": "husky install"
   },
   "dependencies": {
-    "@nextui-org/react": "^2.2.9",
     "@prisma/client": "5.7.1",
+    "@radix-ui/react-checkbox": "^1.0.4",
+    "@radix-ui/react-dialog": "^1.0.5",
+    "@radix-ui/react-dropdown-menu": "^2.0.6",
+    "@radix-ui/react-icons": "^1.3.0",
+    "@radix-ui/react-label": "^2.0.2",
+    "@radix-ui/react-radio-group": "^1.1.3",
+    "@radix-ui/react-select": "^2.0.0",
+    "@radix-ui/react-separator": "^1.0.3",
+    "@radix-ui/react-slot": "^1.0.2",
+    "@radix-ui/react-toast": "^1.1.5",
+    "@radix-ui/react-tooltip": "^1.0.7",
     "@stripe/react-stripe-js": "^2.4.0",
     "@stripe/stripe-js": "^2.2.2",
     "@supabase/ssr": "latest",
     "@supabase/supabase-js": "latest",
     "@types/fold-to-ascii": "^5.0.2",
     "autoprefixer": "10.4.15",
-    "cssnano": "^6.0.2",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.0",
     "fold-to-ascii": "^5.0.1",
-    "framer-motion": "^10.17.0",
-    "geist": "^1.0.0",
     "next": "latest",
     "next-themes": "^0.2.1",
     "nextjs-toploader": "^1.6.4",
@@ -35,10 +44,10 @@
     "react-dom": "18.2.0",
     "react-icons": "^4.12.0",
     "sharp": "^0.33.1",
-    "sonner": "^1.3.1",
     "stripe": "^14.11.0",
     "tailwind-merge": "^2.2.0",
     "tailwindcss": "^3.4.1",
+    "tailwindcss-animate": "^1.0.7",
     "typescript": "^5.3.3",
     "uuid": "^9.0.1",
     "zustand": "^4.4.7"
