--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "autoprefixer": "10.4.15",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
+    "cssnano": "^6.0.3",
     "fold-to-ascii": "^5.0.1",
     "next": "latest",
     "next-themes": "^0.2.1",
