--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "private": true,
   "scripts": {
-    "dev": "next dev --turbo",
+    "dev": "rimraf .next && next dev --turbo",
     "build": "prisma generate && next build",
     "start": "next start",
     "generate": "prisma generate",
@@ -71,7 +71,8 @@
     "lint-staged": "^15.2.0",
     "postgres": "^3.4.3",
     "prettier": "^3.1.1",
-    "prisma": "^5.7.1"
+    "prisma": "^5.7.1",
+    "rimraf": "^5.0.5"
   },
   "lint-staged": {
     "**/*.{ts,tsx}": [
