Add vaul package and update @radix-ui/react-dialog to version 1.0.4

--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "tailwindcss-animate": "^1.0.7",
     "typescript": "^5.3.3",
     "uuid": "^9.0.1",
+    "vaul": "^0.8.0",
     "zustand": "^4.4.7"
   },
   "devDependencies": {
