--- a/package.json
+++ b/package.json
@@ -73,7 +73,7 @@
     "lint-staged": "^15.2.0",
     "postgres": "^3.4.3",
     "prettier": "^3.1.1",
-    "prisma": "^5.7.1",
+    "prisma": "5.7.1",
     "rimraf": "^5.0.5"
   },
   "lint-staged": {
