--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@supabase/ssr": "latest",
     "@supabase/supabase-js": "latest",
     "@types/fold-to-ascii": "^5.0.2",
+    "@uidotdev/usehooks": "^2.4.1",
     "autoprefixer": "10.4.15",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
