Add embla-carousel-autoplay and embla-carousel-react dependencies

--- a/package.json
+++ b/package.json
@@ -38,6 +38,8 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "cssnano": "^6.0.3",
+    "embla-carousel-autoplay": "^8.0.0-rc19",
+    "embla-carousel-react": "^8.0.0-rc19",
     "fold-to-ascii": "^5.0.1",
     "next": "latest",
     "next-themes": "^0.2.1",
