Add new dependencies: apexcharts and dayjs

--- a/package.json
+++ b/package.json
@@ -34,10 +34,12 @@
     "@supabase/supabase-js": "latest",
     "@types/fold-to-ascii": "^5.0.2",
     "@uidotdev/usehooks": "^2.4.1",
+    "apexcharts": "^3.45.2",
     "autoprefixer": "10.4.15",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "cssnano": "^6.0.3",
+    "dayjs": "^1.11.10",
     "embla-carousel-autoplay": "^8.0.0-rc19",
     "embla-carousel-react": "^8.0.0-rc19",
     "fold-to-ascii": "^5.0.1",
@@ -46,6 +48,7 @@
     "nextjs-toploader": "^1.6.4",
     "postcss": "^8.4.32",
     "react": "18.2.0",
+    "react-apexcharts": "^1.4.1",
     "react-collapse": "^5.1.1",
     "react-dom": "18.2.0",
     "react-icons": "^4.12.0",
