Refactor data seeding and add transaction support

--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "generate": "prisma generate",
     "migrate-dev": "dotenv -e .env.development.local -- prisma migrate dev && bun lib/seedTriggers.ts",
     "migrate-prod": "dotenv -e .env.production.local -- prisma migrate deploy && bun lib/seedTriggers.ts",
-    "seed": "bun --env-file=.env.development.local data/seed.ts",
-    "seed-prod": "bun --env-file=.env.production.local data/seedProd.ts",
+    "seed": "dotenv -e .env.development.local -- bun lib/seedTriggers.ts && bun data/seed.ts",
+    "seed-prod": "dotenv -e .env.production.local -- bun lib/seedTriggers.ts && bun data/seedProd.ts",
     "studio": "dotenv -e .env.development.local -- prisma studio",
     "lint": "next lint",
     "prepare": "husky install"
