Update clientOrdersDev.json to clientOrders.json and add user connection in createQuery

--- a/package.json
+++ b/package.json
@@ -1,14 +1,16 @@
 {
   "private": true,
   "scripts": {
-    "dev": "rimraf .next && next dev --turbo",
+    "dev": "rimraf .next && next dev --turbo --experimental-https",
     "build": "prisma generate && next build",
     "start": "next start",
     "generate": "prisma generate",
-    "migrate-dev": "dotenv -e .env.development.local -- prisma migrate dev && bun lib/seedTriggers.ts",
-    "migrate-prod": "dotenv -e .env.production.local -- prisma migrate deploy && bun lib/seedTriggers.ts",
-    "seed": "dotenv -e .env.development.local -- bun lib/seedTriggers.ts && bun data/seed.ts",
-    "seed-prod": "dotenv -e .env.production.local -- bun lib/seedTriggers.ts && bun data/seedProd.ts",
+    "migrate-dev": "dotenv -e .env.development.local -- prisma migrate dev && bun seed-triggers",
+    "migrate-prod": "dotenv -e .env.production.local -- prisma migrate deploy && bun seed-triggers-prod",
+    "seed": "bun --env-file=.env.development.local data/seed.ts",
+    "seed-prod": "bun --env-file=.env.production.local data/seed.ts",
+    "seed-triggers": "bun --env-file=.env.development.local lib/seedTriggers.ts",
+    "seed-triggers-prod": "bun --env-file=.env.production.local lib/seedTriggers.ts",
     "studio": "dotenv -e .env.development.local -- prisma studio",
     "lint": "next lint",
     "prepare": "husky install"
@@ -47,10 +49,10 @@
     "next-themes": "^0.2.1",
     "nextjs-toploader": "^1.6.4",
     "postcss": "^8.4.32",
-    "react": "18.2.0",
+    "react": "^18.2.0",
     "react-apexcharts": "^1.4.1",
     "react-collapse": "^5.1.1",
-    "react-dom": "18.2.0",
+    "react-dom": "^18.2.0",
     "react-icons": "^4.12.0",
     "sharp": "^0.33.1",
     "stripe": "^14.11.0",
@@ -66,9 +68,9 @@
     "@types/bun": "^1.0.1",
     "@types/deep-eql": "^4.0.2",
     "@types/node": "20.3.1",
-    "@types/react": "18.2.0",
+    "@types/react": "^18.2.8",
     "@types/react-collapse": "^5.0.4",
-    "@types/react-dom": "18.2.0",
+    "@types/react-dom": "^18.2.8",
     "@types/uuid": "^9.0.7",
     "@typescript-eslint/eslint-plugin": "^6.17.0",
     "dotenv-cli": "^7.3.0",
