--- a/package.json
+++ b/package.json
@@ -36,7 +36,6 @@
     "@stripe/stripe-js": "^2.2.2",
     "@supabase/ssr": "latest",
     "@supabase/supabase-js": "latest",
-    "@types/fold-to-ascii": "^5.0.2",
     "@uidotdev/usehooks": "^2.4.1",
     "apexcharts": "^3.45.2",
     "autoprefixer": "10.4.15",
@@ -47,7 +46,6 @@
     "dayjs": "^1.11.10",
     "embla-carousel-autoplay": "^8.0.0-rc19",
     "embla-carousel-react": "^8.0.0-rc19",
-    "fold-to-ascii": "^5.0.1",
     "next": "latest",
     "next-themes": "^0.2.1",
     "nextjs-toploader": "^1.6.4",
@@ -68,30 +66,24 @@
     "zustand": "^4.4.7"
   },
   "devDependencies": {
+    "@biomejs/biome": "1.5.3",
     "@types/bun": "^1.0.1",
-    "@types/deep-eql": "^4.0.2",
     "@types/node": "20.3.1",
     "@types/react": "^18.2.8",
     "@types/react-collapse": "^5.0.4",
     "@types/react-dom": "^18.2.8",
     "@types/uuid": "^9.0.7",
-    "@typescript-eslint/eslint-plugin": "^6.17.0",
     "dotenv-cli": "^7.3.0",
     "encoding": "^0.1.13",
-    "eslint": "8.56.0",
-    "eslint-config-next": "14.0.4",
-    "eslint-plugin-unused-imports": "^3.0.0",
     "husky": "^8.0.0",
     "lint-staged": "^15.2.0",
     "postgres": "^3.4.3",
-    "prettier": "^3.1.1",
     "prisma": "5.7.1",
     "rimraf": "^5.0.5"
   },
   "lint-staged": {
-    "**/*.{ts,tsx}": [
-      "eslint ./ -c .eslintrc.json --quiet --format visualstudio",
-      "prettier ./ --write --ignore-unknown"
+    "**/*.{js,ts,tsx,json}": [
+      "biome check --no-errors-on-unmatched --files-ignore-unknown=true"
     ]
   }
 }
