--- a/package.json
+++ b/package.json
@@ -84,6 +84,6 @@
     "rimraf": "^5.0.5"
   },
   "lint-staged": {
-    "*": ["biome check --no-errors-on-unmatched --files-ignore-unknown=true"]
+    "*": ["biome check --no-errors-on-unmatched --files-ignore-unknown=true --apply"]
   }
 }
