--- a/biome.json
+++ b/biome.json
@@ -4,7 +4,7 @@
     "enabled": true
   },
   "files": {
-    "ignore": ["node_modules/", ".next/"]
+    "ignore": ["node_modules/", ".next/", "global.d.ts"]
   },
   "linter": {
     "enabled": true,
