Add nursery linting rules to biome.json

--- a/biome.json
+++ b/biome.json
@@ -15,6 +15,10 @@
       },
       "correctness": {
         "useExhaustiveDependencies": "off"
+      },
+      "nursery": {
+        "noUnusedImports": "error",
+        "useImportType": "error"
       }
     }
   },
