Refactor filter creation in custom-order and products store

--- a/biome.json
+++ b/biome.json
@@ -16,6 +16,9 @@
       "correctness": {
         "useExhaustiveDependencies": "off"
       },
+      "suspicious": {
+        "noExplicitAny": "off"
+      },
       "nursery": {
         "noUnusedImports": "error",
         "useImportType": "error"
