--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "@supabase/ssr": "latest",
     "@supabase/supabase-js": "latest",
     "@uidotdev/usehooks": "^2.4.1",
+    "@vercel/analytics": "^1.1.2",
     "apexcharts": "^3.45.2",
     "autoprefixer": "10.4.15",
     "class-variance-authority": "^0.7.0",
