--- a/package.json
+++ b/package.json
@@ -1,18 +1,19 @@
 {
   "private": true,
   "scripts": {
-    "dev": "rimraf .next && next dev --turbo",
-    "build": "prisma generate && next build",
+    "dev": "bun clean && next dev --turbo",
+    "build": "bun generate && next build",
     "start": "next start",
     "generate": "prisma generate",
-    "migrate-dev": "dotenv -e .env.development.local -- prisma migrate dev && bun seed-triggers",
-    "migrate-prod": "dotenv -e .env.production.local -- prisma migrate deploy && bun seed-triggers-prod",
-    "seed": "bun --env-file=.env.development.local data/seed.ts",
-    "seed-prod": "bun --env-file=.env.production.local data/seed.ts",
-    "seed-triggers": "bun --env-file=.env.development.local lib/seedTriggers.ts",
-    "seed-triggers-prod": "bun --env-file=.env.production.local lib/seedTriggers.ts",
-    "studio": "dotenv -e .env.development.local -- prisma studio",
+    "clean": "bun run clean.ts",
     "lint": "biome check --no-errors-on-unmatched --files-ignore-unknown=true --apply .",
+    "migrate": "dotenv -e .env.development.local -- prisma migrate dev && bun seed-triggers",
+    "seed": "bun --env-file=.env.development.local data/seed.ts",
+    "seed-triggers": "bun --env-file=.env.development.local lib/seedTriggers.ts",
+    "migrate:prod": "dotenv -e .env.production.local -- prisma migrate deploy && bun seed-triggers-prod",
+    "seed:prod": "bun --env-file=.env.production.local data/seed.ts",
+    "seed-triggers:prod": "bun --env-file=.env.production.local lib/seedTriggers.ts",
+    "studio": "dotenv -e .env.development.local -- prisma studio",
     "prepare": "husky install"
   },
   "dependencies": {
