--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "@stripe/stripe-js": "^2.2.2",
     "@supabase/ssr": "latest",
     "@supabase/supabase-js": "latest",
+    "@tanstack/react-table": "^8.11.7",
     "@uidotdev/usehooks": "^2.4.1",
     "@vercel/analytics": "^1.1.2",
     "apexcharts": "^3.45.2",
