--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "@supabase/ssr": "latest",
     "@supabase/supabase-js": "latest",
     "@tanstack/react-table": "^8.11.7",
+    "@types/lodash.snakecase": "^4.1.9",
     "@uidotdev/usehooks": "^2.4.1",
     "@vercel/analytics": "^1.1.2",
     "apexcharts": "^3.45.2",
@@ -49,6 +50,7 @@
     "dayjs": "^1.11.10",
     "embla-carousel-autoplay": "^8.0.0-rc19",
     "embla-carousel-react": "^8.0.0-rc19",
+    "lodash.snakecase": "^4.1.1",
     "next": "latest",
     "next-themes": "^0.2.1",
     "nextjs-toploader": "^1.6.4",
@@ -57,8 +59,9 @@
     "react-apexcharts": "^1.4.1",
     "react-collapse": "^5.1.1",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.50.0",
     "react-icons": "^4.12.0",
-    "sharp": "^0.33.1",
+    "sharp": "^0.33.0",
     "stripe": "^14.11.0",
     "tailwind-merge": "^2.2.0",
     "tailwindcss": "^3.4.1",
