--- a/package.json
+++ b/package.json
@@ -38,7 +38,6 @@
     "@supabase/ssr": "latest",
     "@supabase/supabase-js": "latest",
     "@tanstack/react-table": "^8.11.7",
-    "@types/lodash.snakecase": "^4.1.9",
     "@uidotdev/usehooks": "^2.4.1",
     "@vercel/analytics": "^1.1.2",
     "apexcharts": "^3.45.2",
@@ -50,6 +49,7 @@
     "dayjs": "^1.11.10",
     "embla-carousel-autoplay": "^8.0.0-rc19",
     "embla-carousel-react": "^8.0.0-rc19",
+    "image-blob-reduce": "^4.1.0",
     "lodash.snakecase": "^4.1.1",
     "next": "latest",
     "next-themes": "^0.2.1",
@@ -74,6 +74,8 @@
   "devDependencies": {
     "@biomejs/biome": "1.5.3",
     "@types/bun": "^1.0.1",
+    "@types/image-blob-reduce": "^4.1.4",
+    "@types/lodash.snakecase": "^4.1.9",
     "@types/node": "20.3.1",
     "@types/react": "^18.2.8",
     "@types/react-collapse": "^5.0.4",
